<resources>
    <string name="app_name">CK_WGU_196</string>
    <string name="view_terms">View Terms</string>
    <string name="app_title">App Title</string>
    <string name="course_keeper">Course Keeper</string>
    <string name="textview">TextView</string>
    <string name="add_term">Add Term</string>
    <string name="term_name">Term Name</string>
    <string name="term_start">Term Start</string>
    <string name="term_end">Term End</string>
    <string name="add_term_button">AddTermButton</string>
    <string name="edit_term">Add Term</string>
    <string name="term_name_view">Term Name</string>
    <string name="term_start_detail">term_start_detail</string>
    <string name="term_details">Term Details</string>
    <string name="associated_courses_title">associated_courses_title</string>
    <string name="associated_courses">Associated Courses</string>
    <string name="save_changes">Save Changes</string>
    <string name="extended_fab_label">Add Term</string>
    <string name="add_course_">Add Course</string>
    <string name="courses_title">Courses</string>
    <string name="course_start">Course Start</string>
    <string name="course_name">Course Name</string>
    <string name="course_end">Course End</string>
    <string name="status">Status</string>
    <string name="add_course">Add Course</string>
    <string name="save_course">Save</string>
    <string name="view_courses">View Courses</string>
    <string name="view_schedule">View Schedule</string>
    <string name="courses_menu">Courses</string>
    <string name="assessments_menu">Assessments</string>
    <string name="instructors_menu">Instructors</string>
    <string name="delete_term">Delete Term</string>
    <string name="send_alert">Send Alert</string>
    <string name="select_term">Select Term</string>
    <string name="select_instructor">Select Instructor</string>
    <string name="extended_fab_label_Course">Add Course</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="delete_course">Delete Course</string>
    <string name="associated_assessments_view">Associated Assessments</string>
    <string name="share_course_notes">Share Course Notes</string>
    <string name="set_course_start_alert">Set Course Start Alert</string>
    <string name="set_course_end_alert">Set Course End Alert</string>
    <string name="extended_fab_label_Assessment">Add Assessment</string>
    <string name="date_assessment">Date</string>
    <string name="type_assessment">Type</string>
    <string name="name_assessment">Name</string>
    <string name="select_type_assessment">Select Type</string>
    <string name="channel_title">Channel</string>
    <string name="channel_desc">Channel Description</string>
    <string name="save_assessment">Save</string>
    <string name="add_assessment_fab">Add Assessment</string>
    <string name="assessment_type">Type</string>
    <string name="associated_instructors">Associated Instructors</string>
    <string name="email_instructor">Email</string>
    <string name="name_instructor">Name</string>
    <string name="phone_instructor">Phone</string>
    <string name="name_instructor_dt">Name</string>
    <string name="email_instructor_dt">Email</string>
    <string name="channelDescription">Channel Description</string>
    <string name="channelName">Channel Name</string>
    <string name="course_status">Course Status</string>
    <string name="select_status">-Select-</string>
    <string name="fill_fields">Please fill out all fields and make the start date is before the end date</string>
    <string name="add_term_AddTermActivity">Add Term</string>
    <string name="fill_all_fields">Please fill our all fields</string>
    <string name="delete_assessment_dt">Delete Assessment</string>
    <string name="set_alert_dt">Set Alert</string>
    <string name="delete_instructor">Delete Instructor</string>
    <string name="assessment_add_to_couse">Assessment</string>
    <string name="instructor_add_to_course">Instructor</string>
    <string name="end_assessment">End</string>
    <string name="start_assessment">Start</string>
    <string name="start_assessment_dt">Start</string>
    <string name="end_assessment_dt">End</string>
    <string name="name_assessment_dt">Name</string>
    <string name="phone_instructor_dt">Phone</string>
    <string name="set_alert_assessment_start">Set Alert: Assessment Start</string>
    <string name="set_alert_assessment_end">Set Alert: Assessment End</string>
    <string name="fill_out_fields_date_check">Please fill out all fields and make the start date is before the end date</string>
    <string name="notes_course_dt">Notes</string>
    <string name="name_course_dt">Course Name</string>
    <string name="start_course_dt">Course Start</string>
    <string name="end_course_dy">Course End</string>
    <string name="course_status_dt">Course Status</string>
    <string name="course_notes_dt">Course Notes</string>
    <string name="course_end_DT">Course End</string>
    <string name="save_changes_assessment">Save Changes</string>
    <string name="status_course_DT">Status</string>
    <string name="end_course_DT">End</string>
    <string name="start_course_DT">Start</string>
    <string name="name_course_DT">Name</string>
    <string name="view_course_menu_item">View Course</string>
    <string name="type_assessment_add">Type</string>
    <string name="go_back">Go Back</string>

</resources>