<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1f5fe"
    tools:context=".UI.MainActivity">

    <Button
        android:id="@+id/viewtermsbutton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button1"
        android:fontFamily="sans-serif-light"
        android:onClick="termActivity"
        android:text="@string/view_schedule"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_title"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/course_keeper"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#0086c3"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="345dp"
        android:rotationX="6"
        app:layout_constraintBottom_toTopOf="@+id/viewtermsbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_baseline_laptop_chromebook_24" />

</androidx.constraintlayout.widget.ConstraintLayout>