<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.TermDetailActivity"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="?attr/colorAccent" />

    <EditText
        android:id="@+id/termNameDetailEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/termNameViewDetail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/termNameViewDetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/termNameViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/termStartViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="319dp"
        android:text="@string/term_start"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/termStartDateEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="32dp"
        android:focusable="false"
        android:minHeight="48dp"
        android:paddingStart="2dp"
        android:paddingEnd="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/termStartViewDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/termStartViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/termNameViewDetail" />

    <EditText
        android:id="@+id/termEndDateEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="32dp"
        android:focusable="false"
        android:minHeight="48dp"
        android:paddingStart="2dp"
        android:paddingEnd="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/termEndViewDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/termEndViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/termEndViewDetail" />

    <TextView
        android:id="@+id/termEndViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="192dp"
        android:text="@string/term_end"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/associatedCoursesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/associated_courses"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termEndDateEdt" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="saveTerm"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toTopOf="@+id/associatedCoursesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termEndDateEdt"
        app:layout_constraintVertical_bias="0.468" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/associatedCourses"
        android:layout_width="0dp"
        android:layout_height="247dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associatedCoursesTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/term_list_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButtonAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#e57373"
        android:onClick="AddCourse"
        android:text="@string/extended_fab_label_Course"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associatedCourses"
        app:layout_constraintVertical_bias="0.129" />

</androidx.constraintlayout.widget.ConstraintLayout>